--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,26 @@
+html {
+  /* 62.5% of 16px browser font size is 10px - see 1rem trick */
+  font-size: 62.5%;
+}
+
+html,
+body,
+#root,
 .App {
+  height: 100%;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-weight: 500;
+}
+
+.App-footer {
+  position: relative;
+}
+
+.App-footer-text {
+  font-size: 1.25rem;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  position: absolute;
+  right: 1.5rem;
+  bottom: 1.5rem;
 }
