--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ body,
 .App {
   height: 100%;
   text-align: center;
-  background-color: #282c34;
+  background-color: #c9ada7;
   font-weight: 500;
 }
 
@@ -19,8 +19,15 @@ body,
 
 .App-footer-text {
   font-size: 1.25rem;
+  font-weight: 600;
+
   color: white;
   position: absolute;
   right: 1.5rem;
   bottom: 1.5rem;
+
+  padding: 7px;
+  border: 1px solid white;
+  border-radius: 5px;
+  background-color: #ceb5b0;
 }
