--- a/src/App.css
+++ b/src/App.css
@@ -13,13 +13,11 @@ body,
   text-align: center;
 }
 
-.app__page-wrapper {
-  background-color: #c9ada7;
-  height: 100vh;
-  width: 100vw;
+main {
+  height: 100%;
   display: flex;
   flex-direction: column;
-  overflow-x: hidden;
+  background-color: #c9ada7;
 }
 
 .app__footer {
